--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,15 +22,16 @@ rootProject.allprojects {
 apply plugin: "com.android.library"
 
 android {
-    if (project.android.hasProperty("namespace")) {
-        namespace = "com.rocksti.get_thumbnail_video"
-    }
+    namespace = "com.rocksti.get_thumbnail_video"
+//    if (project.android.hasProperty("namespace")) {
+//        namespace = "com.rocksti.get_thumbnail_video"
+//    }
 
     compileSdk = 34
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_1_8
-        targetCompatibility = JavaVersion.VERSION_1_8
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     defaultConfig {
